RegistryParser - change how getAllNames returns - Return in alphabetical order - Return just the names not everything in the parser map