@@ -13,7 +13,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * A parser based on a {@link Registry} used to parse data from a string or turn data into a string.
@@ -96,7 +95,7 @@ public class RegistryParser<R extends Keyed> extends Parser<R> {
 	 * Note that some entries may represent the same registry object.
 	 */
 	public String getAllNames() {
-		List<String> strings = parseMap.keySet().stream().filter(s -> !s.startsWith("minecraft:")).sorted().collect(Collectors.toList());
+		List<String> strings = this.names.values().stream().sorted().toList();
 		return StringUtils.join(strings, ", ");
 	}
 
